--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,6 +1,7 @@
 .container_ {
   width: 90%;
   margin: 0 auto;
+  margin-top: 100px;
 }
 
 .box {
@@ -13,14 +14,14 @@
   background-color: bisque;
 }
 
-.bg-red {
+.bgRed {
   background-color: brown;
 }
 
-.bg-yellow {
+.bgYellow {
   background-color: yellow;
 }
 
-.bg-green {
+.bgGreen {
   background-color: green;
 }
