--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,7 +1,11 @@
+body {
+  background-color: azure;
+}
+
 .container_ {
   width: 90%;
   margin: 0 auto;
-  margin-top: 100px;
+  margin-top: 50px;
 }
 
 .box {
@@ -16,6 +20,7 @@
 
 .bgRed {
   background-color: brown;
+  color: white;
 }
 
 .bgYellow {
@@ -24,4 +29,10 @@
 
 .bgGreen {
   background-color: green;
+  color: white;
+}
+
+h1 {
+  text-align: center;
+  margin-top: 50px;
 }
